[gd_scene load_steps=28 format=3 uid="uid://cb1e3mb4clttl"]

[ext_resource type="Script" path="res://scripts/levels/katedra_informatiky/katedra_informatiky.gd" id="1_45hsa"]
[ext_resource type="PackedScene" uid="uid://c7dtdy11356p2" path="res://scenes/user_interface.tscn" id="1_eu35v"]
[ext_resource type="PackedScene" uid="uid://tb371guck2qd" path="res://scenes/levels/sumavska/sumavska.tscn" id="2_4er1a"]
[ext_resource type="PackedScene" uid="uid://dprbjqvu2al7c" path="res://scenes/player.tscn" id="2_barup"]
[ext_resource type="Texture2D" uid="uid://b0p1h823q1cyt" path="res://textures/katedra_informatiky_background.png" id="4_dtl5b"]
[ext_resource type="Script" path="res://scripts/levels/katedra_informatiky/velitel_katedry_informatiky.gd" id="5_knl4g"]
[ext_resource type="Resource" uid="uid://c2yxabu832u52" path="res://dialogues/velitel_katedry_informatiky.tres" id="6_4d8e3"]
[ext_resource type="Texture2D" uid="uid://f7tcr6h5cdx3" path="res://images/npc_characters/velitel_katedry_informatiky.png" id="6_oq7h4"]
[ext_resource type="PackedScene" uid="uid://ltped2ukoxcp" path="res://scenes/interaction_area.tscn" id="6_xsy14"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBox.gd" id="7_puqtv"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeWait.gd" id="8_xolab"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeGhost.gd" id="9_cd51y"]
[ext_resource type="FontFile" uid="uid://5sb7ywytiods" path="res://fonts/exprswy free.ttf" id="9_lytg3"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/bbcodeMatrix.gd" id="10_3e4o6"]
[ext_resource type="Theme" uid="uid://dq18l0hyb3bqt" path="res://addons/dialogue_nodes/themes/bubblyClean.theme" id="14_mci4r"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/DialogueBubble.gd" id="15_xgtk2"]
[ext_resource type="Resource" uid="uid://c8mu00kbtq61p" path="res://dialogues/tutorial.tres" id="16_6bkpl"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i28kh"]
radius = 300.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2tv8s"]
radius = 41.0122

[sub_resource type="Theme" id="Theme_un213"]
default_font = ExtResource("9_lytg3")

[sub_resource type="RichTextEffect" id="RichTextEffect_8edh5"]
script = ExtResource("8_xolab")

[sub_resource type="RichTextEffect" id="RichTextEffect_xxw0x"]
script = ExtResource("9_cd51y")

[sub_resource type="RichTextEffect" id="RichTextEffect_6wp5g"]
script = ExtResource("10_3e4o6")

[sub_resource type="RichTextEffect" id="RichTextEffect_eq0dr"]
script = ExtResource("8_xolab")

[sub_resource type="RichTextEffect" id="RichTextEffect_08j15"]
script = ExtResource("9_cd51y")

[sub_resource type="RichTextEffect" id="RichTextEffect_5pxwu"]
script = ExtResource("10_3e4o6")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7qv0w"]
size = Vector2(352, 621)

[node name="katedra_informatiky" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_45hsa")
default_position = Vector2(1240, 640)
next_scene = ExtResource("2_4er1a")
camera_limit_bottom = 1080
camera_limit_right = 1920

[node name="user_interface" parent="." instance=ExtResource("1_eu35v")]

[node name="background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(960, 540)
texture = ExtResource("4_dtl5b")
metadata/_edit_group_ = true

[node name="velitel_katedry_informatiky" type="StaticBody2D" parent="."]
y_sort_enabled = true
position = Vector2(408, 856)
collision_mask = 2
script = ExtResource("5_knl4g")
texture = ExtResource("6_oq7h4")
dialogue_data = ExtResource("6_4d8e3")
start_id = "GAMESTART"

[node name="Sprite2D" type="Sprite2D" parent="velitel_katedry_informatiky"]
y_sort_enabled = true
offset = Vector2(0, -90)

[node name="interaction_area" parent="velitel_katedry_informatiky" instance=ExtResource("6_xsy14")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="velitel_katedry_informatiky/interaction_area"]
shape = SubResource("CircleShape2D_i28kh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="velitel_katedry_informatiky"]
shape = SubResource("CircleShape2D_2tv8s")

[node name="CanvasLayer" type="CanvasLayer" parent="velitel_katedry_informatiky"]

[node name="DialogueBox" type="Panel" parent="velitel_katedry_informatiky/CanvasLayer"]
visible = false
z_index = 3
offset_left = 460.0
offset_top = 808.0
offset_right = 1460.0
offset_bottom = 1064.0
theme = SubResource("Theme_un213")
script = ExtResource("7_puqtv")
custom_effects = Array[RichTextEffect]([SubResource("RichTextEffect_8edh5"), SubResource("RichTextEffect_xxw0x"), SubResource("RichTextEffect_6wp5g")])

[node name="DialogueBubble" type="RichTextLabel" parent="velitel_katedry_informatiky/CanvasLayer"]
visible = false
clip_contents = false
offset_left = 496.0
offset_top = 650.0
offset_right = 636.0
offset_bottom = 673.0
theme = ExtResource("14_mci4r")
bbcode_enabled = true
text = "Sample dialogue."
fit_content = true
autowrap_mode = 0
custom_effects = [SubResource("RichTextEffect_eq0dr"), SubResource("RichTextEffect_08j15"), SubResource("RichTextEffect_5pxwu")]
script = ExtResource("15_xgtk2")
data = ExtResource("16_6bkpl")
dialogue_custom_effects = [SubResource("RichTextEffect_eq0dr"), SubResource("RichTextEffect_08j15"), SubResource("RichTextEffect_5pxwu")]

[node name="sumavska_transition" type="Area2D" parent="."]
visible = false
position = Vector2(1473, 291)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="sumavska_transition"]
position = Vector2(166, 300.5)
shape = SubResource("RectangleShape2D_7qv0w")
disabled = true

[node name="player" parent="." instance=ExtResource("2_barup")]
position = Vector2(1243, 614)

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(0, 480, 1312, 488, 1448, 608, 1448, 64, 1816, 424, 1816, 984, 1920, 1080, 0, 1080, 0, 488, -8, 488, -8, 1088, 1928, 1088, 1928, -8, -8, -8, -8, 480, -8, 488, 0, 488)

[connection signal="enable_door" from="velitel_katedry_informatiky" to="." method="_on_plk_bigo_enable_door"]
[connection signal="dialogue_signal" from="velitel_katedry_informatiky/CanvasLayer/DialogueBox" to="velitel_katedry_informatiky" method="_on_dialogue_signal"]
[connection signal="body_entered" from="sumavska_transition" to="." method="_on_sumavska_transition_body_entered"]
